--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <span class="modal-form-wrapper">
                  <input type="text" class="modal-input" name="user-name" minlength="2" pattern="[a-zA-Zа-яёА-ЯЁ]+" title="Имя должно содержать символы кириллицы или латиницы" required>
                  <svg class="modal-icon" width="18" height="18">
-                   <use href="./images/icons.svg#person-black"></use>
+                   <use href="./images/icons.svg#icon-person-black"></use>
                  </svg>
                </span>
                 </label>
@@ -97,7 +97,7 @@
                  <span class="modal-form-wrapper">
                <input type="tel" class="modal-input" name="user-phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-000-00-00" required>
                 <svg class="modal-icon" width="18" height="18">
-                  <use href="./images/icons.svg#phone-black"></use>
+                  <use href="./images/icons.svg#icon-phone-black"></use>
                 </svg>
                </span>
                </label>
@@ -106,7 +106,7 @@
                  <span class="modal-form-wrapper">
                 <input type="email" class="modal-input" name="user-email" required>
                 <svg class="modal-icon" width="18" height="18">
-                  <use href="./images/icons.svg#email-black"></use>
+                  <use href="./images/icons.svg#icon-email-black"></use>
                 </svg>
                </span>
                </label>
@@ -493,7 +493,7 @@
             <input type="email"  name="user-email" class="form-footer-email" placeholder="E-mail">
             <button type="submit" class="form-footer-button">Подписаться
               <svg class="form-footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
+                <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
           </form>
