--- a/index.html
+++ b/index.html
@@ -75,15 +75,16 @@
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <div class="modal-close" >
-              <button type="button" class=" data-modal-close modal-button-x">
+           
+              <button type="button" class="modal-button-x" data-modal-close>
                 <svg class="modal-close-x" width="18" height="18">
                   <use href="./images/sprite.svg#icon-close-black"></use>
                 </svg>
               </button>
               <form class="modal-form">
                 <p class="modal-form-title">Оставьте свои данные, мы вам перезвоним</p>
-              <div class="modal-privat"> <label class="modal-label">
+              <div class="modal-privat">
+                 <label class="modal-label">
                   Имя
                   <span class="modal-form-wrapper">
                  <input type="text" class="modal-input" name="user-name" minlength="2" pattern="[a-zA-Zа-яёА-ЯЁ]+" title="Имя должно содержать символы кириллицы или латиницы" required>
@@ -122,7 +123,7 @@
               </div>
                  <button type="submit" class="modal-button">Отправить</button>
               </form>
-           </div>
+           
          </div>
             </div>
           </div>
