--- a/index.html
+++ b/index.html
@@ -75,57 +75,88 @@
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-           
-              <button type="button" class="modal-button-x" data-modal-close>
-                <svg class="modal-close-x" width="18" height="18">
-                  <use href="./images/sprite.svg#icon-close-black"></use>
-                </svg>
-              </button>
-              <form class="modal-form">
-                <p class="modal-form-title">Оставьте свои данные, мы вам перезвоним</p>
+            <button type="button" class="modal-button-x" data-modal-close>
+              <svg class="modal-close-x" width="18" height="18">
+                <use href="./images/sprite.svg#icon-close-black"></use>
+              </svg>
+            </button>
+            <form class="modal-form">
+              <p class="modal-form-title">
+                Оставьте свои данные, мы вам перезвоним
+              </p>
               <div class="modal-privat">
-                 <label class="modal-label">
+                <label class="modal-label">
                   Имя
                   <span class="modal-form-wrapper">
-                 <input type="text" class="modal-input" name="user-name" minlength="2" pattern="[a-zA-Zа-яёА-ЯЁ]+" title="Имя должно содержать символы кириллицы или латиницы" required>
-                 <svg class="modal-icon" width="18" height="18">
-                   <use href="./images/sprite.svg#icon-person-black"></use>
-                 </svg>
-               </span>
+                    <input
+                      type="text"
+                      class="modal-input"
+                      name="user-name"
+                      minlength="2"
+                      pattern="[a-zA-Zа-яёА-ЯЁ]+"
+                      title="Имя должно содержать символы кириллицы или латиницы"
+                      required
+                    />
+                    <svg class="modal-icon" width="18" height="18">
+                      <use href="./images/sprite.svg#icon-person-black"></use>
+                    </svg>
+                  </span>
                 </label>
                 <label class="modal-label">
-                 Телефон
-                 <span class="modal-form-wrapper">
-               <input type="tel" class="modal-input" name="user-phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-000-00-00" required>
-                <svg class="modal-icon" width="18" height="18">
-                  <use href="./images/sprite.svg#icon-phone-black"></use>
-                </svg>
-               </span>
-               </label>
-               <label class="modal-label">
-                 Почта
-                 <span class="modal-form-wrapper">
-                <input type="email" class="modal-input" name="user-email" required>
-                <svg class="modal-icon" width="18" height="18">
-                  <use href="./images/sprite.svg#icon-email-black"></use>
-                </svg>
-               </span>
-               </label>
-               <label class="modal-label">
-                 Комментарий
-                <textarea name="user-message" class="modal-massage" placeholder="Введите текст"></textarea>
-               </label>
-              </div>
-              <div class="modal-check">
-                <input type="checkbox" class="modal-checkbox visually-hidden" id="accept-policy">
-                <label for="accept-policy" class="modal-checkbox-label">Соглашаюсь с рассылкой и принимаю &nbsp;<a href="" class="modal-accept-policy">Условия договора</a>
+                  Телефон
+                  <span class="modal-form-wrapper">
+                    <input
+                      type="tel"
+                      class="modal-input"
+                      name="user-phone"
+                      pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                      title="096-000-00-00"
+                      required
+                    />
+                    <svg class="modal-icon" width="18" height="18">
+                      <use href="./images/sprite.svg#icon-phone-black"></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="modal-label">
+                  Почта
+                  <span class="modal-form-wrapper">
+                    <input
+                      type="email"
+                      class="modal-input"
+                      name="user-email"
+                      required
+                    />
+                    <svg class="modal-icon" width="18" height="18">
+                      <use href="./images/sprite.svg#icon-email-black"></use>
+                    </svg>
+                  </span>
+                </label>
+                <label class="modal-label">
+                  Комментарий
+                  <textarea
+                    name="user-message"
+                    class="modal-massage"
+                    placeholder="Введите текст"
+                  ></textarea>
                 </label>
               </div>
-                 <button type="submit" class="modal-button">Отправить</button>
-              </form>
-           
-         </div>
-            </div>
+              <div class="modal-check">
+                <input
+                  type="checkbox"
+                  class="modal-checkbox visually-hidden"
+                  id="accept-policy"
+                />
+                <label for="accept-policy" class="modal-checkbox-label"
+                  >Соглашаюсь с рассылкой и принимаю &nbsp;<a
+                    href=""
+                    class="modal-accept-policy"
+                    >Условия договора</a
+                  >
+                </label>
+              </div>
+              <button type="submit" class="modal-button">Отправить</button>
+            </form>
           </div>
         </div>
       </section>
@@ -491,15 +522,20 @@
         <div class="form-footer-container">
           <p class="form-footer-text">Подпишитесь на рассылку</p>
           <form class="form-footer">
-            <input type="email"  name="user-email" class="form-footer-email" placeholder="E-mail">
-            <button type="submit" class="form-footer-button">Подписаться
+            <input
+              type="email"
+              name="user-email"
+              class="form-footer-email"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="form-footer-button">
+              Подписаться
               <svg class="form-footer-icon" width="24" height="24">
                 <use href="./images/sprite.svg#icon-icon-send"></use>
               </svg>
             </button>
           </form>
         </div>
-      </div>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
